2011-09-18  Dan Bernstein  <mitz@apple.com>

        Try to fix the Chromium Mac build after r95391.

        * WebCore.gyp/WebCore.gyp:

2011-09-18  Dan Bernstein  <mitz@apple.com>

        Try to fix the Chromium Mac build after r95391.

        * WebCore.gyp/WebCore.gyp:

2011-09-18  Dan Bernstein  <mitz@apple.com>

        Try to fix the Chromium Mac build after r95391.

        * WebCore.gypi: Updated for the renaming of ComplexTextController.cpp.
        * WebCore.xcodeproj/project.pbxproj: Ditto.
        * platform/graphics/Font.h: Changed #if directives to include the Chromium Mac port.
        * platform/graphics/SimpleFontData.h: Ditto.
        * platform/graphics/mac/ComplexTextControllerCoreText.cpp: Changed the filename extension of this
        Objective-C++ file to .mm.
        * platform/graphics/mac/ComplexTextControllerCoreText.mm: Copied from Source/WebCore/platform/graphics/mac/ComplexTextControllerCoreText.cpp.

2011-09-18  Dan Bernstein  <mitz@apple.com>

        Snow Leopard build fix after r95391.

        * platform/graphics/mac/ComplexTextControllerCoreText.cpp:
        (WebCore::ComplexTextController::collectComplexTextRunsForCharactersCoreText):

2011-09-18  Dan Bernstein  <mitz@apple.com>

        Leopard build fix after r95391.

        * platform/graphics/mac/ComplexTextControllerATSUI.cpp:
        (WebCore::ComplexTextController::collectComplexTextRunsForCharactersATSUI):

2011-09-18  Dan Bernstein  <mitz@apple.com>

        Allow Core Text to choose the fallback font for rendering a combining character sequence

        Fixes <rdar://problem/7860281> Decomposed text is displayed incorrectly when Verdana is specified
        https://bugs.webkit.org/show_bug.cgi?id=68287

        Reviewed by Dave Hyatt.

        Test: platform/mac/fast/text/combining-character-sequence-fallback.html

        * WebCore.xcodeproj/project.pbxproj: Compile ComplexTextControllerCoreText.cpp as Objective-C++.