@@ -1,3 +1,15 @@
+2011-09-18  Ilya Tikhonovsky  <loislo@chromium.org>
+
+        Web Inspector: chromium-win: "Save timeline data" does nothing.
+        https://bugs.webkit.org/show_bug.cgi?id=68313
+
+        windows shell API function GetSaveFileName doesn't accept file names with ':' symbol.
+
+        Reviewed by Pavel Feldman.
+
+        * inspector/front-end/TimelinePanel.js:
+        (WebInspector.TimelineModel.prototype._saveToFile):
+
 2011-09-18  Dan Bernstein  <mitz@apple.com>
 
         Try to fix the Chromium Mac build after r95391.
